[package]
name = "mindcache-core"
version = "0.1.0"
edition = "2021"
authors = ["MindCache Team"]
description = "A lightweight, local-first memory engine for AI applications"
license = "MIT"
repository = "https://github.com/hamzzaaamalik/mindcache"
homepage = "https://mindcache.dev"
documentation = "https://docs.rs/mindcache-core"
keywords = ["memory", "ai", "llm", "storage", "cache"]
categories = ["database", "memory-management", "api-bindings"]
readme = "README.md"

[lib]
name = "mindcache_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation for memory IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging (optional)
log = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }

# Compression support (optional)
flate2 = { version = "1.0", optional = true }

# Text processing utilities
regex = "1.0"
unicode-segmentation = "1.10"

# Performance monitoring (optional)
criterion = { version = "0.5", optional = true }

[dev-dependencies]
tempfile = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = { version = "1.0", default-features = false, features = ["std"] }
pretty_assertions = "1.4"

[features]
default = ["compression", "logging"]

# Enable compression for memory storage
compression = ["flate2"]

# Enable detailed logging
logging = ["log", "env_logger"]

# Enable performance benchmarks
benchmarks = ["criterion"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "session_management"
path = "examples/session_management.rs"

[[example]]
name = "memory_decay"
path = "examples/memory_decay.rs"

[[example]]
name = "c_api_demo"
path = "examples/c_api_demo.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"

[[test]]
name = "c_api_tests"
path = "tests/c_api_tests.rs"

[[test]]
name = "performance_tests"
path = "tests/performance_tests.rs"
required-features = ["benchmarks"]